# millionaire

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
assets/icons/: icon.icns
docs/: eastmoney-cookies.md
scripts/: bump-version.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: StockPanel.tsx
